--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="h-100">
+<html class="h-100" lang="es">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="UTF-8" />
@@ -49,9 +49,7 @@
       window.$RefreshSig$ = () => (type) => type
       window.__vite_plugin_react_preamble_installed__ = true
     </script>
-    <!-- if development -->
-    <!-- <script type="module" src="https://3000-tebanban-publiapp11-agqtzbb0jjd.ws-us93.gitpod.io/@vite/client"></script>
-    <script type="module" src="https://3001-tebanban-publiapp11-agqtzbb0jjd.ws-us93.gitpod.io/index.jsx"></script> -->
+    
 
     <script type="module" src="/src/front/js/index.jsx"></script>
   </body>
