--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
       integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
       crossorigin="anonymous"
     ></script>
-    <script type="module">
+    <!-- <script type="module">
       import RefreshRuntime from 'https://3000-tebanban-publiapp11-agqtzbb0jjd.ws-us93.gitpod.io/@react-refresh'
       RefreshRuntime.injectIntoGlobalHook(window)
       window.$RefreshReg$ = () => {}
       window.$RefreshSig$ = () => (type) => type
       window.__vite_plugin_react_preamble_installed__ = true
-    </script>
+    </script> -->
     
 
     <script type="module" src="/src/front/js/index.jsx"></script>
