--- a/index.html
+++ b/index.html
@@ -24,17 +24,16 @@
     <div id="app" class="h-100"></div>
 
     <!-- vite scripts backend integration-->
-    
-    <script type="module">
-      import RefreshRuntime from "https://3001-${GITPOD_WORKSPACE_URL:8}/@react-refresh";
+
+    <!-- <script type="module">
+      import RefreshRuntime from "https://3002-tebanban-publiapp11-pqydi0ogij6.ws-us104.gitpod.io/@react-refresh";
       RefreshRuntime.injectIntoGlobalHook(window);
       window.$RefreshReg$ = () => {};
       window.$RefreshSig$ = () => (type) => type;
       window.__vite_plugin_react_preamble_installed__ = true;
     </script>
-    <script type="module" src="https://3001-${GITPOD_WORKSPACE_URL:8}/@vite/client"></script>
-    <script type="module" src="https://3001-${GITPOD_WORKSPACE_URL:8}/src/js/index.js"></script>
-    <!-- vite scripts -->
+    <script type="module" src="https://3002-tebanban-publiapp11-pqydi0ogij6.ws-us104.gitpod.io/@vite/client"></script>
+    <script type="module" src="https://3002-${GITPOD_WORKSPACE_URL:8}/src/js/index.js"></script> -->
 
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
@@ -46,13 +45,6 @@
       integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
       crossorigin="anonymous"
     ></script>
-    <!-- <script type="module">
-      import RefreshRuntime from 'https://3000-tebanban-publiapp11-agqtzbb0jjd.ws-us93.gitpod.io/@react-refresh'
-      RefreshRuntime.injectIntoGlobalHook(window)
-      window.$RefreshReg$ = () => {}
-      window.$RefreshSig$ = () => (type) => type
-      window.__vite_plugin_react_preamble_installed__ = true
-    </script> -->
 
     <script type="module" src="/src/front/js/index.jsx"></script>
   </body>
